# Snake-Game

./: .gitignore  CMakeLists.txt  README.md
include/: Apple.hpp  Game.hpp  Snake.hpp
src/: Apple.cpp  Game.cpp  Snake.cpp  main.cpp
